# hackathon

./: .env.example  .gitignore  DEPLOY.md  README.md  generate_translations.py  main.py  pyproject.toml  requirements.txt  run_cli.py  run_telegram.py  startup.sh  test_multilingual.py
.github/workflows/: api-azure_cafemate-bot.yml
cafebot/: __init__.py  config.py  engine.py  feedback_manager.py  i18n.py  llm.py  menu.py  menu_manager.py  models.py
data/: feedback.json  menu.json
