[project]
name = "hackathon"
version = "0.1.0"
description = "A friendly cafe ordering chatbot that recommends drinks based on your mood"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.2.0",
    "langdetect>=1.0.9",
]
